--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "styled-components": "^3.4.9"
   },
   "scripts": {
+    "kit": "kit examples",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -24,6 +25,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@compositor/kit": "^1.0.47",
+    "@compositor/kit-cli": "^1.0.47",
     "flow-bin": "^0.82.0"
   }
 }
