--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "styled-components": "^3.4.9"
   },
   "scripts": {
+    "flow": "flow",
     "kit": "kit examples",
     "start": "react-scripts start",
     "build": "react-scripts build",
