--- a/package.json
+++ b/package.json
@@ -27,9 +27,17 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^7.2.0",
+    "@commitlint/config-conventional": "^7.1.2",
     "@compositor/kit": "^1.0.47",
     "@compositor/kit-cli": "^1.0.47",
     "flow-bin": "^0.82.0",
+    "husky": "^1.1.1",
     "prettier": "1.14.3"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
