--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "styled-components": "^3.4.9"
   },
   "scripts": {
-    "flow": "flow",
+    "flow": "./scripts/check-flow.sh && flow",
     "kit": "kit examples",
     "prettier": "prettier --write '{examples,src}/**/*.js'",
     "start": "react-scripts start",
