--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lodash": "^4.17.11",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "styled-components": "^3.4.9"
   },
